<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/change_data"
            android:textSize="22sp"
            android:drawableRight="@drawable/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/change_pass"
            android:textSize="22sp"
            android:drawableRight="@drawable/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/scores"
            android:textSize="22sp"
            android:drawableRight="@drawable/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/person"
            android:textSize="22sp"
            android:drawableRight="@drawable/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/pack"
            android:textSize="22sp"
            android:drawableRight="@drawable/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/logout"
            android:textSize="22sp"
            android:drawableRight="@drawable/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#000000"/>
    </LinearLayout>

</LinearLayout>