<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle"
                android:drawableLeft="@drawable/more"
                android:hint="手机号"
                android:padding="10dp"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle"
                android:drawableLeft="@drawable/more"
                android:hint="密码"
                android:password="true"
                android:padding="10dp" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle"
                android:drawableLeft="@drawable/more"
                android:padding="10dp"
                android:password="true"
                android:hint="确认密码"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle"
                android:drawableLeft="@drawable/more"
                android:padding="10dp"
                android:hint="昵称"/>



            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/sex">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/sex"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/male"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/female"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="15dp"
                android:id="@+id/register_button"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:id="@+id/register_privacy"
                android:text="@string/privacy" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:id="@+id/register_login"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>